--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "src/roar_carla_ros2"]
 	path = src/roar_carla_ros2
 	url = https://github.com/wuxiaohua1011/roar_carla_ros2
+[submodule "src/roar_ground_plane_detector"]
+	path = src/roar_ground_plane_detector
+	url = https://github.com/wuxiaohua1011/roar_ground_plane_detector
