--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,6 @@
 [submodule "src/indy_bot_urdf"]
 	path = src/indy_bot_urdf
 	url = https://github.com/wuxiaohua1011/indy_bot_urdf
+[submodule "src/livox_ros2_driver"]
+	path = src/livox_ros2_driver
+	url = https://github.com/wuxiaohua1011/livox_ros2_driver
